# internal/dto/create_product_request.go
@@ -6,7 +6,7 @@ type CreateProductRequest struct {
 	Name        string  `json:"name"`
 	Description string  `json:"description"`
 	Price       float64 `json:"price"`
-}
+} // @name CreateProductRequest
 
 func (c *CreateProductRequest) ConvertToProductVO() *model.Product {
 	return &model.Product{
